fix. Error overflow tabla

--- a/src/componentes/atomos/qtabla.css
+++ b/src/componentes/atomos/qtabla.css
@@ -9,11 +9,6 @@
 }
 
 quimera-tabla {
-    width: 100%;
-    display: block;
-    white-space: nowrap;
-    overflow-x: auto;
-    overflow-y: auto;
 
     :root {
         --transicion-basica: 0.12 ease-in-out;
@@ -24,7 +19,7 @@ quimera-tabla {
         border-spacing: 0;
         border-collapse: separate;
         text-align: left;
-        /* display: block; */
+        display: block;
         white-space: nowrap;
         overflow-x: auto;
         overflow-y: auto;
